--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,29 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: mediocrity
+email: hi@mediocrity.xyz
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  We make mediocre art. @mediocrity.xyz on Instagram
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://mediocrity.xyz" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  johjakob
+
+# Defaults
+defaults:
+  - scope:
+      path: "assets/images"
+    values:
+      image: true
 
 # Build settings
-theme: minima
+markdown: kramdown
 plugins:
   - jekyll-feed
+
+# Sass settings
+sass:
+  sass_dir: _sass
 
 # Exclude from processing.
 # The following items will not be processed, by default.
