--- a/.github/workflows/deploy_uberspace.yml
+++ b/.github/workflows/deploy_uberspace.yml
@@ -14,5 +14,6 @@ jobs:
     - name: Build static site
       run: |
         cd $GITHUB_WORKSPACE
+        bundle config set --local path 'vendor/bundle'
         bundle install
         bundle exec jekyll build --destination ~/html
